--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <!-- Primary Meta Tags -->
   <meta name="title" content="Untied Ulysses: Memory-Efficient Context Parallelism via Headwise Chunking">
-  <meta name="description" content="Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8xH100 node.">
+  <meta name="description" content="Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8&times;H100 node.">
   <meta name="keywords" content="context parallelism, long sequences, Transformers, activation memory, distributed training, attention, Ring Attention, Ulysses, memory efficiency, large language models">
   <meta name="author" content="Ravi Ghadia, Maksim Abraham, Sergei Vorobyov, Max Ryabinin">
   <meta name="robots" content="index, follow">
@@ -16,7 +16,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Untied Ulysses">
   <meta property="og:title" content="Untied Ulysses: Memory-Efficient Context Parallelism via Headwise Chunking">
-  <meta property="og:description" content="Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8xH100 node.">
+  <meta property="og:description" content="Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8&times;H100 node.">
   <meta property="og:url" content="https://rghadia.github.io/untied_ulysses_proj">
   <meta property="og:image" content="https://rghadia.github.io/untied_ulysses_proj/static/images/main_figure.png">
   <meta property="og:image:width" content="2400">
@@ -31,7 +31,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Untied Ulysses: Memory-Efficient Context Parallelism via Headwise Chunking">
-  <meta name="twitter:description" content="Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8xH100 node.">
+  <meta name="twitter:description" content="Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8&times;H100 node.">
   <meta name="twitter:image" content="https://rghadia.github.io/untied_ulysses_proj/static/images/main_figure.png">
   <meta name="twitter:image:alt" content="Untied Ulysses - Main Figure">
 
@@ -96,7 +96,7 @@
     "@context": "https://schema.org",
     "@type": "ScholarlyArticle",
     "headline": "Untied Ulysses: Memory-Efficient Context Parallelism via Headwise Chunking",
-    "description": "Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8xH100 node.",
+    "description": "Untied Ulysses reduces peak attention activation memory by up to 82.5% for 70B Transformers and supports context lengths up to 5M tokens on a single 8&times;H100 node.",
     "author": [
       {
         "@type": "Person",
@@ -123,7 +123,7 @@
     "url": "https://rghadia.github.io/untied_ulysses_proj",
     "image": "https://rghadia.github.io/untied_ulysses_proj/static/images/main_figure.png",
     "keywords": ["context parallelism", "long sequences", "Transformers", "activation memory", "distributed training"],
-    "abstract": "Efficiently processing long sequences with Transformer models usually requires splitting the computations across accelerators via context parallelism. The dominant approaches in this family of methods, such as Ring Attention or DeepSpeed Ulysses, enable scaling over the context dimension but do not focus on memory efficiency, which limits the sequence lengths they can support. More advanced techniques, such as Fully Pipelined Distributed Transformer or activation offloading, can further extend the possible context length at the cost of training throughput. In this paper, we present Upipe, a simple yet effective context parallelism technique that performs fine-grained chunking at the attention head level. This technique significantly reduces the activation memory usage of self-attention, breaking the activation memory barrier and unlocking much longer context lengths. Our approach lowers the peak activation memory usage in the attention layer by as much as 82.5% for 70B Transformers, while matching previous context parallelism techniques in terms of training speed. Untied Ulysses can support maximum context lengths of up to 5M tokens for training 8B models on a single 8xH100 node, improving upon prior methods by 25%.",
+    "abstract": "Efficiently processing long sequences with Transformer models usually requires splitting the computations across accelerators via context parallelism. The dominant approaches in this family of methods, such as Ring Attention or DeepSpeed Ulysses, enable scaling over the context dimension but do not focus on memory efficiency, which limits the sequence lengths they can support. More advanced techniques, such as Fully Pipelined Distributed Transformer or activation offloading, can further extend the possible context length at the cost of training throughput. In this paper, we present Upipe, a simple yet effective context parallelism technique that performs fine-grained chunking at the attention head level. This technique significantly reduces the activation memory usage of self-attention, breaking the activation memory barrier and unlocking much longer context lengths. Our approach lowers the peak activation memory usage in the attention layer by as much as 82.5% for 70B Transformers, while matching previous context parallelism techniques in terms of training speed. Untied Ulysses can support maximum context lengths of up to 5M tokens for training 8B models on a single 8&times;H100 node, improving upon prior methods by 25%.",
     "isAccessibleForFree": true
   }
   </script>
@@ -215,7 +215,7 @@
             In this paper, we present <b>Upipe</b>, a simple yet effective context parallelism technique that performs fine-grained chunking at the attention head level.
             This technique significantly reduces the activation memory usage of self-attention, breaking the activation memory barrier and unlocking much longer context lengths.
             Our approach lowers the peak activation memory usage in the attention layer by as much as <b>82.5%</b> for 70B Transformers, while matching previous context parallelism techniques in terms of training speed.
-            UPipe can support maximum context lengths of up to <b>5M</b> tokens for training 8B models on a 8xH100 node, improving upon prior methods by <b>25%</b>.
+            UPipe can support maximum context lengths of up to <b>5M</b> tokens for training 8B models on a 8&times;H100 node, improving upon prior methods by <b>25%</b>.
           </p>
         </div>
       </div>
@@ -229,12 +229,14 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container is-max-desktop">
-      <h2 class="title is-3 has-text-centered">Motivation</h2>
+      <h2 class="title is-3 has-text-centered">The Memory Wall</h2>
       <div class="columns is-centered">
         <div class="column is-four-fifths">
           <img src="static/images/intro_memory_stack.png" alt="Activation memory breakdown showing that attention dominates memory usage in long-context Transformer training." style="width: 100%; border-radius: 12px; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);" loading="lazy"/>
-          <h2 class="subtitle has-text-centered" style="margin-top: 1rem;">
-            <b>Figure:</b> Activation memory breakdown for long-context Transformer training. Attention activations dominate the overall memory footprint, motivating the need for memory-efficient context parallelism.
+          <h2 class="subtitle has-text-justified" style="margin-top: 1rem;">
+            <!-- <b>Figure:</b>  -->
+            <b> Llama3-8B:</b> Activation memory breakdown for context length of 3M training on 8&times;H100. Attention activations dominate the overall memory footprint, motivating the need for memory-efficient context parallelism.
+            <b>ALST</b> handles activation memory for non-attention stages via tiling, but overlooks the attention stage. <b>UPipe</b> lowers the peak activation memory usage in the attention stage by headwise chunking.
           </h2>
         </div>
       </div>
@@ -248,13 +250,13 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Method</h2>
+        <h2 class="title is-3">Untying the Attention Heads</h2>
         <div class="content has-text-justified">
           <p>
-            Existing context parallelism approaches like DeepSpeed Ulysses distribute the sequence across devices and use All-to-All communication to exchange key-value pairs before computing full multi-head attention. While effective for scaling, these methods materialize all attention head activations simultaneously, leading to high peak memory usage that limits the maximum context length.
+            <b>DeepSpeed Ulysses</b>, a widely used context parallelism technique, distributes the sequence across devices and uses All-to-All communication to exchange key-value pairs before computing full multi-head attention. While effective for scaling, this method materializes all attention head activations simultaneously, leading to high peak memory that limits the maximum context length.
           </p>
           <p>
-            <b>Untied Ulysses</b> addresses this by performing fine-grained chunking at the attention head level. Instead of computing all heads at once, we process a subset of attention heads at a time, reusing QKV projection and All-to-All communication buffers across chunks. This simple modification dramatically reduces the peak activation memory in the attention layer without affecting the mathematical correctness of the computation or the final training throughput.
+            <b>Untied Ulysses (UPipe)</b> addresses this by performing fine-grained chunking at the attention head level. Instead of computing all heads at once, we process a subset of attention heads at a time, reusing QKV projection and All-to-All communication buffers across chunks. This simple modification dramatically reduces the peak activation memory in the attention layer without affecting the mathematical correctness of the computation.
           </p>
         </div>
       </div>
@@ -262,7 +264,31 @@
     <div style="margin-top: 1rem;">
       <img src="static/images/main_figure.png" alt="Untied Ulysses method overview: headwise chunking with buffer reuse." style="width: 100%; border-radius: 12px; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);">
       <h2 class="subtitle has-text-centered" style="margin-top: 1rem;">
-        <b>Figure:</b> (a) DeepSpeed Ulysses performs All-to-All communication followed by full multi-head attention. (b) <b>Untied Ulysses</b> processes attention heads in fine-grained chunks, reusing QKV and communication buffers to drastically reduce peak activation memory.
+        <b>Figure:</b> (a) DeepSpeed Ulysses performs QKV projection and All-to-All communication followed by full multi-head attention. (b) <b>UPipe</b> processes attention heads in fine-grained chunks, reusing QKV and communication buffers to reduce peak activation memory usage, thereby allowing for longer context lengths.
+      </h2>
+    </div>
+  </div>
+</section>
+
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">GQA Scheduling</h2>
+        <div class="content has-text-justified">
+          <p>
+            To maintain compatibility with Grouped Query Attention (GQA), we implement a GQA-aware scheduling strategy that allows for headwise chunking. As shown in the figure, we schedule attention for heads out of order, to avoid redundant communication of KV in subsequent stages. 
+          </p>
+          <p>
+            For example, in stage-0, we perform attention for KV heads 0,1,2,3 and correspondingly, pick the first query heads from the respective groups Q0, Q4, Q8, Q12. In stage-1, we no longer need to communicate KV heads 0,1,2,3 since they were already communicated in stage-0, and are already present on the correct devices. So we now pick the next query heads Q1, Q5, Q9, Q13. Thus we saved the communication for the KV in stages 1-3, reducing runtime and memory overhead.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div style="margin-top: 1rem;">
+      <img src="static/images/GQA_fig_cropped.png" alt="GQA Scheduling" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);">
+      <h2 class="subtitle has-text-centered" style="margin-top: 1rem;">
+        <b>GQA Scheduling:</b> UPipe schedules attention for different QKV heads out of order, to avoid redundant communication of KV in subsequent stages. Finally, we rearrange the output heads to maintain correctness.
       </h2>
     </div>
   </div>
@@ -277,13 +303,13 @@
       <h2 class="title is-3 has-text-centered">Results</h2>
       <div class="content has-text-justified">
         <p>
-          We evaluate Untied Ulysses against several context parallelism baselines on two model families across a wide range of context lengths (128K&ndash;5M tokens) on a single 8&times;H100 node. Training throughput is reported in tokens per second. <b>Bold</b> values indicate the best result for each context length.
+          We evaluate Untied Ulysses against several context parallelism baselines on two model families across a wide range of context lengths (128K&ndash;5M tokens) on 8&times;H100 nodes. Training throughput is reported in tokens per second. <b>Bold</b> values indicate the best result for each context length.
         </p>
       </div>
 
       <!-- Llama3-8B Table -->
       <div class="content">
-        <h3 class="title is-4" style="margin-bottom: 0.75rem;">Llama3-8B</h3>
+        <h3 class="title is-4" style="margin-bottom: 0.75rem;">Llama3-8B (8&times;H100)</h3>
         <div style="overflow-x: auto;">
           <table class="table is-bordered is-striped is-hoverable is-fullwidth" style="font-size: 0.95rem;">
             <thead>
@@ -345,7 +371,7 @@
                 <td>&mdash;</td>
               </tr>
               <tr style="background-color: #eef6ff;">
-                <td><b>Untied Ulysses</b></td>
+                <td><b>UPipe</b></td>
                 <td>2172.55</td>
                 <td>1434.05</td>
                 <td>850.97</td>
@@ -362,7 +388,7 @@
 
       <!-- Qwen3-32B Table -->
       <div class="content" style="margin-top: 2rem;">
-        <h3 class="title is-4" style="margin-bottom: 0.75rem;">Qwen3-32B</h3>
+        <h3 class="title is-4" style="margin-bottom: 0.75rem;">Qwen3-32B (16&times;H100)</h3>
         <div style="overflow-x: auto;">
           <table class="table is-bordered is-striped is-hoverable is-fullwidth" style="font-size: 0.95rem;">
             <thead>
@@ -424,7 +450,7 @@
                 <td>&mdash;</td>
               </tr>
               <tr style="background-color: #eef6ff;">
-                <td><b>Untied Ulysses</b></td>
+                <td><b>UPipe</b></td>
                 <td>258.44</td>
                 <td><b>230.84</b></td>
                 <td>157.28</td>
