--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
 
 <!-- Youtube video -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Video Presentation</h2>
@@ -488,14 +488,14 @@
         <div class="column is-four-fifths">
           
           <div class="publication-video">
-            <!-- Replace with your YouTube video ID when available -->
+            Replace with your YouTube video ID when available 
             <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- End youtube video -->
 
 
