added portfolio/linkedin links for all authors

--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
               <span class="author-block">
                 <a href="https://ghadiaravi13.github.io/" target="_blank">Ravi Ghadia</a>,</span>
               <span class="author-block">
-                <a href="#" target="_blank">Maksim Abraham</a>,</span>
+                <a href="https://www.linkedin.com/in/fdrose" target="_blank">Maksim Abraham</a>,</span>
               <span class="author-block">
-                <a href="#" target="_blank">Sergei Vorobyov</a>,</span>
+                <a href="https://www.linkedin.com/in/vorobyov01/" target="_blank">Sergei Vorobyov</a>,</span>
               <span class="author-block">
-                <a href="#" target="_blank">Max Ryabinin</a>
+                <a href="https://mryab.github.io/" target="_blank">Max Ryabinin</a>
               </span>
             </div>
 
