--- a/index.html
+++ b/index.html
@@ -579,11 +579,14 @@
           <span class="copy-text">Copy</span>
         </button>
       </div>
-      <pre id="bibtex-code"><code>@article{ghadia2026untied,
-  title={Untied Ulysses: Memory-Efficient Context Parallelism via Headwise Chunking},
-  author={Ravi Ghadia and Maksim Abraham and Sergei Vorobyov and Max Ryabinin},
-  booktitle={ArXiv 2026},
-  year={2026}
+      <pre id="bibtex-code"><code>@misc{ghadia2026untiedulyssesmemoryefficientcontext,
+        title={Untied Ulysses: Memory-Efficient Context Parallelism via Headwise Chunking}, 
+        author={Ravi Ghadia and Maksim Abraham and Sergei Vorobyov and Max Ryabinin},
+        year={2026},
+        eprint={2602.21196},
+        archivePrefix={arXiv},
+        primaryClass={cs.LG},
+        url={https://arxiv.org/abs/2602.21196},
 }</code></pre>
     </div>
 </section>
